@@ -164,13 +164,15 @@ Frequenty Asked Questions:
    ### then, let slapt-get upgrade the rest
    $ slapt-get --dist-upgrade
 
-   ### or you can specify --remove-obsolete to remove
-   ### all depreciated packages.  CAUTION: this can only
-   ### take into consideration packages that are available
-   ### from your current sources.  Thus self made packages
-   ### will be considered obsolete as well.  Only use this
-   ### if you have been using Slackware packages exclusively.
-   ### You can also use this option for information purposes.
+  Or you can specify --remove-obsolete to remove all depreciated packages.
+  CAUTION: this can only take into consideration packages that are available
+  from your current sources.  Thus self made packages will be considered
+  obsolete as well (they can be excluded within slapt-getrc, however).  Only
+  use this if you have been using Slackware packages exclusively.  You can
+  also use this option for information purposes, observing the obsolete
+  packages, then passing all the ones you are sure of to --remove (which can
+  accept multiple packages at once).
+   ### dist upgrade and remove all depreciated/obsolete packages
    $ slapt-get --dist-upgrade --remove-obsolete
 
  Then follow the rest of the directions in UPGRADE.TXT.
@@ -625,8 +627,9 @@ Frequenty Asked Questions:
  --dist-upgrade --remove-obsolete will remove any packages that Pat has removed
  from current.  CAUTION: this can only take into consideration packages that
  are available from your current sources.  Thus self made packages will be
- considered obsolete as well.  Only use this if you have been using Slackware
- packages exclusively.  You can also use this option for information purposes.
+ considered obsolete as well (they can be excluded within slapt-getrc, however).
+ Only use this if you have been using Slackware packages exclusively.  You can
+ also use this option for information purposes.
 
 
 29. How would I script an ldd dependency hack with slapt-get?
@@ -864,6 +867,9 @@ Frequenty Asked Questions:
  package sources in your slapt-getrc file, then you can do the following:
 
   # slapt-get --dist-upgrade --remove-obsolete
+
+ NOTE: You will want to exclude any packages that are self made so they are
+       not removed.
 
 
 41. What provisions have you made for dialup users?
